<resources>
    <string name="app_name">Restaurant Application</string>
    <string name="restaurant_app">Restaurant App</string>
    <string name="intro">
        klas alskdaksdasldska skjsa dksjd askjdaskjd  dsaasd ajsd asjdas dkjasdasjd ajsdk a
        asda sdajsndsa dkjsd asjkdbasjkd askjdbaskjd
    </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="profile">Profile</string>
    <string name="version">Version: 1.0</string>
    <string name="username">Username</string>
    <string name="subject">Subject</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="about_content">
        Lorem sldjas dajsd asjkda kjda sdkjasdjkas dkajsdaksjdaskjd askjdaskdjasdkj sadkjsd aksjdbaskjd askdjsdkja
        sdabsdkjasd asdajksd akjsda skdjas dkajs dasjkd askjdaskd asdk asdkasd sdksd askjd sdks dsj skd skdas
        sdaksd akdsaj
    </string>
    <string name="quality">Quality</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="breakfast">Breakfast</string>
    <string name="launch">Lunch</string>
    <string name="dinner">Dinner</string>
</resources>